--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,8 @@ edition = "2024"
 
 [dependencies]
 ndarray = "0.16.1"
+num-complex = { version = "0.4", optional = true }
+
+[features]
+default = []
+complex = ["complex"]
